--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,87 @@
+body {
+    font-family: "montserrat";
+}
+
 #title {
     background-color: #ff4c68;
+    color: white;
 }
 
 h1 {
     font-style: bold;
-    color: black;
     font-weight: 900;
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
+}
+
+h3{
+    font-family: "montserrat";
+    font-size:  1.5rem;
+    font-weight:900;
 }
 
 .container-fluid {
     padding: 3% 15%;
 }
 
+/* Navigation Bar */
 
+.navbar {
+    padding-bottom: 4.5rem;
+}
+
+.navbar-brand {
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat";
+    font-weight: 400;
+
+}
+
+/* Download Buttons */
+
+.download_button {
+    margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title_image {
+    width: 60%;
+    transform: rotate(25deg);
+    position: relative;
+    margin-left: 25%;
+}
+
+/* Section 2 */
+
+/* Features Section*/
+
+
+#features {
+    padding: 7% 15%;  
+}
+
+.feature-box {
+    text-align: center;
+    padding: 5%;
+}
+
+.icon {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.icon:hover {
+    color:#ff4c68;
+}
 
