--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@ h1 {
     line-height: 1.5;
 }
 
+h2 {
+    font-family: "montserrat";
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
 h3{
     font-family: "montserrat";
     font-size:  1.5rem;
@@ -62,9 +69,7 @@ h3{
     margin-left: 25%;
 }
 
-/* Section 2 */
-
-/* Features Section*/
+/* Features Section/Section 2 */
 
 
 #features {
@@ -85,3 +90,29 @@ h3{
     color:#ff4c68;
 }
 
+/* Testimonials/Section 3 */
+
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: white;
+}
+
+.testimonials_img {
+    border-radius: 100%;
+    width: 10%;
+    margin: 20px;
+}
+
+/* Press/Section 3 */
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press_logo{
+    width: 15%;
+    margin: 20px 20px 50px;
+}
