--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,6 @@ h3{
 /* Testimonials/Section 3 */
 
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
     color: white;
@@ -103,6 +102,10 @@ h3{
     border-radius: 100%;
     width: 10%;
     margin: 20px;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 /* Press/Section 3 */
