--- a/css/styles.css
+++ b/css/styles.css
@@ -119,3 +119,14 @@ h3{
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+/* Pricing/Section 4 */
+
+#pricing {
+    padding: 100px ;
+    text-align: center;
+}
+
+.pricing_column {
+    padding: 3% 2%;
+}  
