--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,6 @@ h3{
     font-size: 1.2rem;
     font-family: "Montserrat";
     font-weight: 400;
-
 }
 
 /* Download Buttons */
@@ -62,23 +61,32 @@ h3{
 
 /* Title Image */
 
+/* made absolute */
 .title_image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+}
+
+/* Added "iphone_sizing" class and made relative */
+.iphone_sizing {
     position: relative;
-    margin-left: 25%;
 }
 
 /* Features Section/Section 2 */
 
-
+/* If youre going to use "z-index" with a white background, you must write the background color in code */
+/* made it relative and z-index of 1 */
 #features {
-    padding: 7% 15%;  
+    padding: 7% 15%;
+    background-color: white;
+    position: relative;
+    z-index: 1;
 }
 
 .feature-box {
     text-align: center;
-    padding: 5%;
+    padding: 4.5%;
 }
 
 .icon {
@@ -124,9 +132,18 @@ h3{
 
 #pricing {
     padding: 100px ;
+    
+}
+
+.pricing_header {
     text-align: center;
 }
 
 .pricing_column {
     padding: 3% 2%;
+    
 }  
+
+.card-header {
+    text-align: center;
+}
