--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,17 @@ h1, h2, h3 {
     line-height: 1.5;
 }
 
+/* Coloring for the sections */
+
+.white-section {
+    background-color: white;
+}
+
+.colored-section {
+    background-color: #ff4c68;
+    color: white;
+}
+
 /* Navigation Bar/Section 1 */
 
 .container-fluid {
@@ -48,15 +59,11 @@ h1, h2, h3 {
 
 /* Title Section/Section 1 */
 
-#title {
-    background-color: #ff4c68;
-    color: white;
+#title .container-fluid {
+    padding: 3% 15% 7%;
     text-align: left;
 }
 
-#title.container-fluid {
-    padding: 3% 15% 7%;
-}
 /* made absolute */
 .title_image {
     width: 60%;
@@ -74,7 +81,6 @@ h1, h2, h3 {
 /* If youre going to use "z-index" with a white background, you must write the background color in code */
 /* made it relative and z-index of 1 */
 #features {
-    background-color: white;
     position: relative;
     z-index: 1;
 }
@@ -100,7 +106,6 @@ h1, h2, h3 {
 
 #testimonials {
     background-color: #ef8172;
-    color: white;
 }
 
 .testimonial_text {
@@ -149,25 +154,12 @@ h2.pricing_header {
 .card-body {
     text-align: left;
 }
-
-/* Call to Action(CTA)/Section 5 */
-
-#cta {
-    background-color: #ff4c68;
-    color: white;
-}
-
-/* Footer/Section 6 */
-
-footer {
-    background-color: white;
-}
-
 span {
     padding: 1% 1%;
 }
 
 /* Additional Responsive CSS */
+
 /* Added "media" to make phone img upright/static. Made section 1 align center */
 @media (max-width: 1028px) {
     .title_image {
