--- a/css/styles.css
+++ b/css/styles.css
@@ -165,17 +165,51 @@ span {
     .title_image {
         position: static;
         transform: rotate(0);
-    }
-
-    .iphone_sizing {
-        text-align: center;
-    }
-
-    h1{
-        text-align: center;
+        width: 80%;
     }
 
     .col-lg-6 {
         text-align: center;
     }
+    
+    #title .container-fluid{
+        padding: 0 4% 7%;
+    }
+    
+    div.container-fluid.row {
+        padding: 0;
+        font-size: 2.5rem;
+        line-height: 1.5;
+        color: #8f8f8f;
+    }
+    
+    h3.feature_title {
+        font-size: 2.5rem;
+        color: black;
+    }
+
+    .download_button {
+        font-size: 2rem;
+    }
+
+    .navbar-brand {
+        font-size: 3rem;
+    }
+
+    .navbar-toggler-icon {
+        font-size: 3rem;
+    }
+
+    #pricing {
+        padding: 5% 2%;
+    }
+
+    #pricing p {
+        color: #8f8f8f
+    }
+
+    .white-section {
+        font-size: 1.3rem;
+    }
+    
 }
